--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,6 +89,66 @@ span {
     margin-left: 5px;
   }
   
+  .projects-section {
+    max-width: 100vw;
+    min-height: 100vh;
+    background-color: #121212;
+    color: #FFFFFF; 
+}
+
+.projects-section h1 {
+    padding-top: 40px;
+    color: #707070;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+}
+
+.projects-gallery {
+    margin-top: 10px;
+    padding: 30px 0;
+    width: 100%;
+    display: grid;
+    grid-gap: 6rem;
+    grid-template-columns: repeat(auto-fit, 21rem);
+    justify-content: center;
+
+
+}
+
+.project {
+    background-color: #121212;
+    padding: 25px;
+    padding-top: 30px;
+    border-radius: 15px;
+    border: 2px solid #4e4848;
+    height: 20rem;
+    width: 21rem;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.project button {
+    background-color: #161616;
+}
+
+
+.project h3 {
+    margin-bottom: 20px;
+}
+
+.project p {
+    margin-top: 15px;
+}
+
+.project-btn {
+    margin-top: 60px;
+    width: 100%;
+
+
+}
+
+
   @keyframes wave-animation {
       0% { transform: rotate( 0.0deg) }
      10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
@@ -108,8 +168,30 @@ span {
   @media screen and (max-width: 992px) {
     html {
       font-size: 80%;
-                      } 
-                                }
+                      }
+    
+        .projects-section h1 {
+            margin-left: 30px;
+        }
+
+      
+
+
+
+       
+
+                                    
+                                    
+                                    }
+
+      
+                      
+    
+
+
+                                
+
+    
     
     /* On screens that are 600px or less, set the background color to olive */
     @media screen and (max-width: 600px) {
@@ -128,8 +210,21 @@ span {
         font-size: 20px;
     }
 
+        .projects-section h1 {
+            margin-left: 30px;
+        }
+
+
+
+
+                                    
+                                    
+                                    }
+
+        
+
    
-                              }
+                              
   
     @media only screen and (max-width: 505px) {
        
@@ -142,10 +237,46 @@ span {
         .contact-btn {
             margin-top: 10px;
         }
-    
+
+
+       
         .footer {
           font-size: 85%;
                       }
+
+        
+                      .projects-gallery {
+                        padding: 30px 0;
+                        width: 100%;
+                        display: grid;
+                        grid-gap: 6rem;
+                        grid-template-columns: repeat(auto-fit, 90vw);
+                        justify-content: center;
+                        padding: 0;
+                        margin-top: 20px;
+                    
+                    
+                    }
+
+                    .project {
+                        background-color: #121212;
+                        padding: 25px;
+                        padding-top: 30px;
+                        border-radius: 15px;
+                        border: 2px solid #4e4848;
+                        height: 20rem;
+                        width: 90vw;
+                        overflow: hidden;
+                        position: relative;
+                    
+                    }
+
+                    .project-btn {
+                        margin-top: 30px;
+                        width: 100%;
+                    
+                    
+                    }
      
   
      
