added Contact Section and reponsive fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,10 @@ html {
     margin:  0 auto;
 }
 
+.button {
+    border-radius: 0.5rem;
+}
+
 
 .bg-image {
     height: 100vh;
@@ -122,7 +126,7 @@ span {
     border-radius: 15px;
     border: 2px solid #4e4848;
     height: 20rem;
-    width: 21rem;
+    width: 20rem;
     overflow: hidden;
     position: relative;
 
@@ -148,6 +152,68 @@ span {
 
 }
 
+.contact-section {
+    background-color: #121212;
+    height: 100vh;
+}
+
+.contact-section h1 {
+    padding-top: 40px;
+    color: #707070;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+
+}
+
+.contact-content {
+    display: flex;
+height: 80vh;
+text-align: center;
+flex-direction: column;
+justify-content: center;
+width: 100%;
+
+}
+
+
+.contact-content p {
+    font-weight: medium;
+    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
+
+
+
+}
+
+.social-link {
+    text-align: left;
+text-decoration: underline;
+font: normal normal medium 30px/39px Roboto;
+letter-spacing: 0px;
+color: #F7EA4F;
+text-decoration: underline;
+
+}
+
+.social-link:hover {
+    color: #b6aa2d;
+}
+
+.email-btn {
+    background-color: #F7EA4F;
+    border-color: #121212;
+    color: #121212;
+    width: 240px;
+    height: 50px;
+    margin-top: 40px;
+}
+
+.email-btn:hover {
+    background-color: #b6aa2d;
+    border-color: #b6aa2d;
+}
+
 
   @keyframes wave-animation {
       0% { transform: rotate( 0.0deg) }
@@ -161,6 +227,39 @@ span {
   }
 
   @media screen and (max-width: 1024px) {
+    html {
+        font-size: 80%;
+                        }
+
+                        html {
+                            font-size: 80%;
+                                            }
+                                          
+                          
+                          .main-content {
+                              margin-left: 40px;
+                          }
+                          
+                              .projects-section h1 {
+                                  margin-left: 30px;
+                              }
+                      
+                              .project-btn {
+                                  margin-top: 25px;
+                              }
+                      
+                              .contact-section h1 {
+                                  margin-left: 30px;
+                              }
+                      
+                              .contact-content {
+                                  margin-left: 30px;
+                              }
+                      
+                              .email-btn {
+                                  height: fit-content;
+                                  font-size: 20px;
+                              }
  }
       
 
@@ -169,9 +268,31 @@ span {
     html {
       font-size: 80%;
                       }
+                    
+    
+    .main-content {
+        margin-left: 40px;
+    }
     
         .projects-section h1 {
             margin-left: 30px;
+        }
+
+        .project-btn {
+            margin-top: 25px;
+        }
+
+        .contact-section h1 {
+            margin-left: 30px;
+        }
+
+        .contact-content {
+            margin-left: 30px;
+        }
+
+        .email-btn {
+            height: fit-content;
+            font-size: 20px;
         }
 
       
@@ -184,16 +305,9 @@ span {
                                     
                                     }
 
-      
-                      
-    
-
-
-                                
 
     
     
-    /* On screens that are 600px or less, set the background color to olive */
     @media screen and (max-width: 600px) {
       html {
         font-size: 70%;
@@ -214,19 +328,44 @@ span {
             margin-left: 30px;
         }
 
+        .project-btn {
+            margin-top: 25px;
+        }
+
+
+
+        .contact-section h1 {
+            margin-left: 30px;
+        }
+
+        .contact-content {
+            text-align: center;
+            margin-left: 30px;
+        }
+
+        .contact-content p {
+            width: 85vw;
+            font-size: 18px ;
+            text-align: left;
+        }
+
+        .email-btn {
+            width: 225px;
+            height: fit-content;
+            margin-top: 20px;
+        }
+
 
 
 
                                     
                                     
                                     }
-
         
 
    
                               
-  
-    @media only screen and (max-width: 505px) {
+    @media only screen and (max-width: 525px) {
        
   
         .projects-btn {
@@ -277,7 +416,28 @@ span {
                     
                     
                     }
+
+            .contact-section h1 {
+                margin-left: 30px;
+            }
+
+            .contact-content {
+                text-align: center;
+                margin-left: 30px;
+            }
+
+            .contact-content p {
+                width: 85vw;
+                font-size: 18px ;
+                text-align: left;
+            }
+
+            .email-btn {
+                width: 200px;
+                height: fit-content;
+                margin-top: 20px;
+            }
      
-  
+
      
                     }
